--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,8 @@
 @import url(normalize.css);
 a {
-  text-decoration: none; }
+  text-decoration: none; 
+  content:'';
+}
 
 ul {
   list-style: none; }
