--- a/public/styles.css
+++ b/public/styles.css
@@ -77,7 +77,11 @@ header {
         margin: 0;
         font-size: 10px;
         text-align: center;
-        border-radius: 20px; } }
+        border-radius: 20px; }
+    .pre-header-right-try-container-try-it-link:hover{
+      border: 1px solid #FF52BF;
+    }
+}
 
 .main-header {
   display: flex;
@@ -112,6 +116,11 @@ header {
         font-family: "Open Sans", sans-serif;
         color: #ebfbff;
         font-weight: 400; }
+     .main-header-description-container-get-started-link:hover {
+       background-color: #fff;
+       border: 2px solid #FF52BF;
+       color: #FF52BF;
+      }
   .main-header-mockup-image-container {
     width: 55%;
     height: auto;
@@ -371,6 +380,11 @@ header {
       font-family: "Open Sans", sans-serif;
       color: #ebfbff;
       font-weight: 600; }
+   .cta-inner-get-started-link:hover{
+       background-color: #fff;
+       border: 2px solid #FF52BF;
+       color: #FF52BF;
+   }
   @media screen and (max-width: 1440px) {
     .cta {
       top: 2270px; } }
