--- a/public/styles.css
+++ b/public/styles.css
@@ -56,6 +56,8 @@ header {
         background-color: #fff;
         border-radius: 40px;
         box-shadow: 0 0 10px lightgrey; }
+             .pre-header-right-try-container-try-it-link:hover{
+              border: 1px solid #FF52BF;}
       @media screen and (max-width: 1440px) {
         .pre-header-right-try-container-try-it-link {
           margin: 0; } }
@@ -78,9 +80,6 @@ header {
         font-size: 10px;
         text-align: center;
         border-radius: 20px; }
-    .pre-header-right-try-container-try-it-link:hover{
-      border: 1px solid #FF52BF;
-    }
 }
 
 .main-header {
